<resources>
    <string name="app_name">photoeditor</string>

    <string name="main_tag_crop">剪裁</string>
    <string name="main_tag_rotate">旋转</string>
    <string name="main_tag_filter">滤镜</string>
    <string name="main_tag_enhance">增强</string>
    <string name="main_tag_marker">美颜</string>
    <string name="main_tag_beautify">美妆</string>

    <string name="main_rotate_left">左旋转</string>
    <string name="main_rotate_right">右旋转</string>
    <string name="main_rotate_mirrorx">左右翻转</string>
    <string name="main_rotate_mirrory">上下翻转</string>

    <string name="main_crop_free">Free</string>
    <string name="main_crop_1_1">1:1</string>
    <string name="main_crop_4_3">4:3</string>
    <string name="main_crop_3_4">3:4</string>

    <string name="invalid_file">文件不可用</string>
    <string name="network_unavailable">网络不可用</string>
    <string name="photo_name">名称:&#160;&#160;</string>
    <string name="photo_image_width">宽度:&#160;&#160;</string>
    <string name="photo_image_length">高度:&#160;&#160;</string>
    <string name="photo_image_size">文件大小:&#160;&#160;</string>
    <string name="photo_aperture">光圈值:&#160;&#160;</string>
    <string name="photo_datetime">时间:&#160;&#160;</string>
    <string name="photo_exposure_time">曝光时间:&#160;&#160;</string>
    <string name="photo_flash">闪光灯:&#160;&#160;</string>
    <string name="photo_focal_length">焦距:&#160;&#160;</string>
    <string name="photo_iso">ISO:&#160;&#160;</string>
    <string name="photo_marker">制造商:&#160;&#160;</string>
    <string name="photo_model">设备型号:&#160;&#160;</string>
    <string name="photo_orientation">旋转角度:&#160;&#160;</string>
    <string name="photo_white_balance">白平衡:&#160;&#160;</string>
    <string name="photo_path">路径:&#160;&#160;</string>

    <string name="dialog_close">关闭</string>
    <string name="switch_open">开</string>
    <string name="switch_close">关</string>
    <string name="balance_manual">手动</string>
    <string name="balance_auto">自动</string>

    <string name="dialog_delect_msg">要删除所选内容吗?</string>
    <string name="dialog_btn_sure">确定</string>
    <string name="dialog_btn_cancel">取消</string>

    <string name="app_id">1530299407239030</string>
    <string name="edt_lbl_soften">磨皮</string>
    <string name="edt_lbl_white">美靓</string>
    <string name="edt_lbl_color">粉底</string>
    <string name="edt_lbl_facetrim">瘦脸</string>
    <string name="eye_bag2">亮眼</string>
    <string name="edt_lbl_enlargeeyes">大眼</string>
    <string name="edt_lbl_deblemish">祛痘</string>
    <string name="edt_help_seekbar">拖动控制强度</string>
    <string name="edt_help_deblemish">长按斑点位置以祛痘</string>
    <string name="deblemish_size_hint">痘痘大小</string>
    <string name="edt_lbl_beforeafter">对比</string>
    <string name="save_share">保存</string>
    <string name="home">返回</string>
    <string name="sns_save_image">已保存到相册</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="edt_tst_load_failed">加载失败。 </string>
    <string name="edt_dlg_wait">请稍后…</string>
    <string name="edt_lnl_quitmsg">您还未保存图片,是否退出?</string>
    <string name="deblemish_info1">无效区域</string>
    <string name="deblemish_info2">战痘次数过多，请确认效果</string>
    <string name="photo_smaill">图片尺寸过小，无法处理！</string>
    <string name="share_succ">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="facebook_notinstall_alert">分享前请安装最新的Facebook!</string>
    <string name="instagram_notinstall_alert">分享前请安装最新的Instagram!</string>
    <string name="pinterest_notinstall_alert">分享前请安装最新的Pinterest!</string>
    <string name="sns_msg_network_unavailable">网络不可用，请稍后重试</string>
    <string name="edit_operation_failure_tip">操作失败。</string>
    <string name="text_edit_share_title">使用以下方式打开</string>
    <string name="sns_label_facebook">Facebook</string>
    <string name="sns_label_tumblr">Tumblr</string>
    <string name="sns_label_flickr">Flickr</string>
    <string name="sns_label_twitter">Twitter</string>
    <string name="sns_label_instagram">Instagram</string>
    <string name="sns_label_pinterest">Pinterest</string>
    <string name="sns_label_more">更多</string>
    <string name="pinch_txt">缩放</string>
    <string name="drag_txt">使用二根手指进行拖拽</string>
    <string name="qudou_txt">点击需遮瑕部位遮瑕</string>
    <string name="deep_colour">深色系</string>
    <string name="ligth_colour">浅色系</string>
    <string name="text_not_installed_market_app">请先安装应用市场。</string>
    <string name="common_network_error">网络不可用，请稍后再试</string>
    <string name="update_title_txt">新版本</string>
    <string name="update_version">版本号：</string>
    <string name="update_sure_btn">立即更新</string>
    <string name="update_cancel_btn">取消</string>
    <string name="share_status_success">分享成功</string>
    <string name="wechat_notinstall_alert">分享前请安装最新的微信客户端!</string>
    <string name="qq_notinstall_alert">分享前请安装最新的QQ!</string>
    <string name="qq">腾讯QQ</string>
    <string name="sina">新浪微博</string>
    <string name="sns_wechat">微信好友</string>
    <string name="wechatfg">微信朋友圈</string>

    <string name="menu_settings">设置</string>
    <string name="title_activity_main">时尚美妆</string>
    <string name="common_no_storage">存储空间不足.</string>
    <string name="none">无</string>
    <string name="cateyes">迷情娃娃</string>
    <string name="lavender">晴彩甜心</string>
    <string name="princess">桃花萌粉</string>
    <string name="refresh">气质女王</string>
    <string name="silk">都市佳人</string>
    <string name="smoky_eyes">霸气烟熏</string>
    <string name="ol_luozhuang">OL裸妆</string>
    <string name="guodongfenchun">果冻粉唇</string>
    <string name="xiariqinxin">夏日清新</string>
    <string name="onekey">推荐妆容</string>
    <string name="shadow">眼影</string>
    <string name="eyeline">眼线</string>
    <string name="eyelash">睫毛</string>
    <string name="blush">腮红</string>
    <string name="contact">美瞳</string>
    <string name="lipstick">口红</string>
    <string name="crop_decode_bmp_err">文件无效,换一张试试!</string>
    <string name="eye_point_help">拖动点到左眼、右眼中心</string>
    <string name="points_face">全脸</string>
    <string name="points_lefteye">左眼</string>
    <string name="points_righteye">右眼</string>
    <string name="points_nose">鼻子</string>
    <string name="points_mouth">嘴巴</string>

    <string name="text_contrast">对比度</string>
    <string name="text_brightness">亮度</string>
    <string name="text_saturation">饱和度</string>

    <string name="low_mem_toast">手机内存不足!</string>
    <string name="error_comment">未检测到五官</string>
</resources>
