<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:selfportrait="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    >

    <RelativeLayout
        android:id="@+id/top_bar_rl"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/main_bar_bg"
        >

        <ImageView
            android:id="@+id/btn_main_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_select"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            />
        <ImageView
            android:id="@+id/btn_main_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/main_save_select"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_bar_rl"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/main_bar_bg"
        >
        <!--<HorizontalScrollView-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:scrollbars="none"-->
            <!-->-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true">

                <com.cam001.photoeditor.MainItem
                    android:id="@+id/btn_main_crop"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    selfportrait:image="@drawable/main_crop_select"
                    android:layout_weight="1.0"
                    selfportrait:text="@string/main_tag_crop"/>

                <com.cam001.photoeditor.MainItem
                    android:id="@+id/btn_main_rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    selfportrait:image="@drawable/main_rotate_select"
                    android:layout_weight="1.0"
                    selfportrait:text="@string/main_tag_rotate"/>

                <com.cam001.photoeditor.MainItem
                    android:id="@+id/btn_main_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    selfportrait:image="@drawable/main_filter_select"
                    android:layout_weight="1.0"
                    selfportrait:text="@string/main_tag_filter"/>

                <com.cam001.photoeditor.MainItem
                    android:id="@+id/btn_main_enhance"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    selfportrait:image="@drawable/main_enhance_select"
                    android:layout_weight="1.0"
                    selfportrait:text="@string/main_tag_enhance"/>

                <com.cam001.photoeditor.MainItem
                    android:id="@+id/btn_main_marker"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    selfportrait:image="@drawable/main_marker_select"
                    android:layout_weight="1.0"
                    selfportrait:text="@string/main_tag_marker"/>

                <com.cam001.photoeditor.MainItem
                    android:id="@+id/btn_main_beautify"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    selfportrait:image="@drawable/main_beautify_select"
                    android:layout_weight="1.0"
                    selfportrait:text="@string/main_tag_beautify"/>
            </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/add_image"
        android:layout_above="@+id/bottom_bar_rl"
        android:layout_below="@+id/top_bar_rl"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/bottom_bar_rl"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp"
        >
        <ImageView
            android:id="@+id/delect_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/main_delect_select"
            />
        <ImageView
            android:id="@+id/detal_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/main_detal_select"
            android:layout_marginLeft="15dp"
            />
    </LinearLayout>

</RelativeLayout>
