<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_dialog_window"
    >

    <RelativeLayout
        android:layout_width="278dp"
        android:layout_height="140dp"
        android:background="#212121"
        android:layout_centerInParent="true"
        >
    <LinearLayout
        android:id="@+id/bottom_bar_ll"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/confirm_button_sure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_btn_sure"
            android:textColor="@color/color_red_textview"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/confirm_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_btn_cancel"
            android:textColor="@color/color_red_textview"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/bottom_bar_ll"
        android:background="#565656"
        />
    <RelativeLayout 
        android:id="@+id/confirm_message_rl"
         android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_bar_ll" 
        >
    <TextView 
        android:id="@+id/confirm_message"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/dialog_delect_msg"
        android:layout_marginLeft="10.66dp"
        android:layout_marginRight="10.66dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>