<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:selfportrait="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg">

    <RelativeLayout
        android:id="@+id/top_rotate_rl"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/main_bar_bg">

        <ImageView
            android:id="@+id/btn_rotate_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:src="@drawable/back_select" />

        <ImageView
            android:id="@+id/btn_rotate_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="2dp"
            android:src="@drawable/main_sure_select" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_rotate_rl"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:background="@color/main_bar_bg">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.cam001.photoeditor.MainItem
                android:id="@+id/btn_rotate_left"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                selfportrait:image="@drawable/main_left_rotate_select"
                selfportrait:text="@string/main_rotate_left" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.cam001.photoeditor.MainItem
                android:id="@+id/btn_rotate_right"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                selfportrait:image="@drawable/main_right_rotate_select"
                selfportrait:text="@string/main_rotate_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.cam001.photoeditor.MainItem
                android:id="@+id/btn_rotate_mirrorx"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                selfportrait:image="@drawable/main_level_rotate_select"
                selfportrait:text="@string/main_rotate_mirrorx" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.cam001.photoeditor.MainItem
                android:id="@+id/btn_rotate_mirrory"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                selfportrait:image="@drawable/main_vertical_rotate_select"
                selfportrait:text="@string/main_rotate_mirrory" />
        </RelativeLayout>
    </LinearLayout>

    <com.cam001.widget.RotateImageView
        android:id="@+id/view_rotate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_rotate_rl"
        android:layout_below="@+id/top_rotate_rl" />

    <com.cam001.service.AdView
        android:id="@+id/adview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_rotate_rl" />
</RelativeLayout>
